erDiagram
    Principal {
        uuid id PK "Unique principal identifier"
        string username "Unique username"
        string principal_type "Type: human, ai_agent, system"
        string email "Optional email address"
        datetime created_at "Timestamp when principal was created"
    }

    Simulation {
        uuid id PK "Unique simulation identifier"
        uuid principal_id FK "Principal who owns this simulation"
        string name "Simulation name"
        string description "Optional simulation description"
        bool is_paused "Whether agent triggering is paused"
        datetime created_at "Timestamp when simulation was created"
    }

    Agent {
        uuid id PK "Unique agent identifier"
        uuid principal_id FK "One-to-one reference to Principal (unique)"
        uuid simulation_id FK "Simulation this agent belongs to"
        uuid model_id FK "LLM model powering decisions"
        uuid created_by_principal_id FK "Principal who created this agent"
        string name "Optional display name"
        string public_profile "Public description visible to other agents"
        json memory_json "Structured memory (key-value storage)"
        string memory_text "Markdown notes for strategies and plans"
        bool is_running "Whether agent is currently executing"
        datetime created_at "Timestamp when agent was spawned"
    }

    Model {
        uuid id PK "Unique model identifier"
        string name "Human readable model name"
        string provider_name "Human readable provider name"
        string provider "Provider identifier (e.g., openai)"
        string provider_model_id "Model ID for API calls"
        string description "Model capabilities"
        bool is_reasoning "Whether model uses reasoning"
        decimal input_cost_per_million "Dollars per million input tokens"
        decimal output_cost_per_million "Dollars per million output tokens"
    }

    Task {
        uuid id PK "Unique task identifier"
        uuid simulation_id FK "Simulation this task belongs to"
        uuid created_by_principal_id FK "Principal who created this task"
        string description "What needs to be done"
        decimal reward_dollars "Dollars rewarded for task completion"
        datetime deadline "Timestamp when task expires"
        bool is_completed "Whether task has been completed"
        string status "Computed: available, closed, expired"
        datetime created_at "Timestamp when task was spawned"
        datetime closed_at "Timestamp when task was closed"
    }

    AgentTask {
        uuid id PK "Unique identifier"
        uuid task_id FK "Which task this relates to"
        uuid agent_id FK "Which agent this relates to"
        string status "in_progress, submitted, accepted, denied, not_selected, abandoned, late"
        string result "Agent's submitted work (null until submitted)"
        datetime created_at "Timestamp when agent accepted task"
        datetime submitted_at "Timestamp when agent submitted work"
    }

    Message {
        uuid id PK "Unique message identifier"
        uuid from_principal_id FK "Sender principal (agent, human, or system)"
        uuid to_principal_id FK "Recipient principal (agent, human, or system)"
        string content "Message body"
        datetime sent_at "Timestamp when message was sent"
        datetime received_at "Timestamp when message was received"
    }

    McpServer {
        uuid id PK "Unique server identifier"
        uuid created_by_principal_id FK "Principal who created this server"
        string name "Server name (unique)"
        string description "What the server provides"
        string server_type "system or custom"
        string transport "stdio or http"
        string command "Command to run server"
        json args "Command arguments"
        json env "Environment variables"
        bool is_active "Whether server is active"
        datetime created_at "Timestamp when created"
    }

    AgentMcpServer {
        uuid id PK "Unique identifier"
        uuid agent_id FK "Agent with access"
        uuid mcp_server_id FK "MCP server accessible to agent"
        datetime granted_at "Timestamp when access was granted"
    }

    AgentTrigger {
        uuid id PK "Unique trigger identifier"
        uuid agent_id FK "Agent subscribed to this trigger"
        string table_name "Table to watch: tasks, messages, agent_tasks, transactions"
        string change_type "INSERT, UPDATE, or DELETE"
        json conditions "Filter conditions as key-value pairs"
        bool is_active "Whether trigger is active"
        datetime created_at "Timestamp when created"
        datetime last_triggered_at "Timestamp of last trigger"
    }

    AgentTriggerEvent {
        uuid id PK "Unique event identifier"
        uuid trigger_id FK "Which trigger was activated"
        uuid agent_id FK "Agent that was triggered"
        string table_name "Table where change occurred"
        uuid record_id "ID of changed record"
        string change_type "Type of change detected"
        json matched_conditions "Conditions that matched"
        bool agent_executed "Whether agent execution started"
        datetime execution_started_at "When execution started"
        datetime execution_completed_at "When execution completed"
        string execution_error "Error message if failed"
        datetime created_at "Timestamp when event recorded"
    }

    AgentModelUsage {
        uuid id PK "Unique identifier"
        uuid agent_id FK "Agent that used model"
        uuid model_id FK "Model that was used"
        int input_tokens "Number of input tokens"
        int output_tokens "Number of output tokens"
        decimal total_cost "Total dollars charged (calculated from model costs)"
        string input "Input prompt sent to model"
        string output "Output returned by model"
        datetime timestamp "Timestamp of usage"
    }

    Transaction {
        uuid id PK "Unique identifier"
        uuid from_principal_id FK "Sender principal (null for system deposits)"
        uuid to_principal_id FK "Recipient principal (null for system deductions)"
        decimal amount "Transaction amount in dollars"
        string reason "Reason for transaction"
        uuid reference_id "Optional reference to related entity"
        datetime timestamp "Timestamp of transaction"
    }

    AgentMcpUsage {
        uuid id PK "Unique identifier"
        uuid agent_id FK "Agent that used the tool"
        uuid mcp_server_id FK "MCP server used"
        string tool_name "Tool name within server"
        string input "Input parameters provided to tool"
        string output "Output returned by tool"
        datetime timestamp "Timestamp of usage"
    }


    Principal ||--|| Agent : "owns (one-to-one)"
    Principal ||--o{ Agent : "created"
    Principal ||--o{ Simulation : "owns"
    Principal ||--o{ Task : "created"
    Principal ||--o{ McpServer : "created"

    Simulation ||--o{ Agent : "contains"
    Simulation ||--o{ Task : "contains"

    Message }o--|| Principal : "sends"
    Message }o--|| Principal : "receives"

    Transaction }o--|| Principal : "sends"
    Transaction }o--|| Principal : "receives"

    Agent }o--|| Model : "uses"
    Agent ||--o{ AgentModelUsage : "generates"
    AgentModelUsage }o--|| Model : "records"

    Agent ||--o{ AgentTask : "attempts"
    AgentTask }o--|| Task : "for"

    Agent ||--o{ AgentMcpServer : "has access to"
    AgentMcpServer }o--|| McpServer : "grants"
    Agent ||--o{ AgentMcpUsage : "uses tools"
    AgentMcpUsage }o--|| McpServer : "from"


    Agent ||--o{ AgentTrigger : "subscribes to"
    Agent ||--o{ AgentTriggerEvent : "triggered by"

    AgentTrigger ||--o{ AgentTriggerEvent : "activates"

